// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunitySidebar renders correctly 1`] = `
<div
  data-stylename="community-sidebar"
>
  <AboutSection
    description="the description, which is long enough to add a \\"Read More\\" button, the description, which is long enough to add a \\"Read More\\" button, the description, which is long enough to add a \\"Read More\\" button, the description, which is long enough to add a \\"Read More\\" button, the description, which is long enough to add a \\"Read More\\" button, "
    name="A Great Cause"
  />
  <SettingsLink
    community={
      Object {
        "description": "the description, which is long enough to add a \\"Read More\\" button, the description, which is long enough to add a \\"Read More\\" button, the description, which is long enough to add a \\"Read More\\" button, the description, which is long enough to add a \\"Read More\\" button, the description, which is long enough to add a \\"Read More\\" button, ",
        "id": 1,
        "memberCount": 56,
        "name": "A Great Cause",
        "slug": "great-cause",
      }
    }
  />
  <MemberSection
    memberCount={56}
    members={
      Array [
        Object {
          "id": 1,
        },
        Object {
          "id": 2,
        },
        Object {
          "id": 3,
        },
      ]
    }
    slug="great-cause"
  />
  <CommunityLeaderSection
    leaders={
      Array [
        Object {
          "id": 4,
        },
        Object {
          "id": 5,
        },
        Object {
          "id": 6,
        },
      ]
    }
    slug="great-cause"
  />
</div>
`;

exports[`MemberSection Doesn't show total if it's < 1 1`] = `
<div
  data-stylename="member-section"
>
  <Link
    data-stylename="members-link"
    to="/c/foo/members"
  >
    <div
      data-stylename="header"
    >
      Members
    </div>
    <div
      data-stylename="images-and-count"
    >
      <RoundImageRow
        data-stylename="image-row"
        imageUrls={
          Array [
            "https://s3.amazonaws.com/uifaces/faces/twitter/fiterik/128.jpg?26029",
            "https://s3.amazonaws.com/uifaces/faces/twitter/ramanathan_pdy/128.jpg?68045",
            "https://s3.amazonaws.com/uifaces/faces/twitter/kapaluccio/128.jpg?10715",
            "https://s3.amazonaws.com/uifaces/faces/twitter/josevnclch/128.jpg?36352",
            "https://s3.amazonaws.com/uifaces/faces/twitter/josemarques/128.jpg?42174",
            "https://s3.amazonaws.com/uifaces/faces/twitter/thomasgeisen/128.jpg?66249",
            "https://s3.amazonaws.com/uifaces/faces/twitter/arashmanteghi/128.jpg?52422",
            "https://s3.amazonaws.com/uifaces/faces/twitter/digitalmaverick/128.jpg?90195",
          ]
        }
      />
    </div>
  </Link>
  <Link
    data-stylename="invite-link"
    to="/c/foo/settings/invite"
  >
    <Button
      color="green-white-green-border"
    >
      Invite People
    </Button>
  </Link>
</div>
`;

exports[`MemberSection Formats total correctly if it's > 999 1`] = `
<div
  data-stylename="member-section"
>
  <Link
    data-stylename="members-link"
    to="/c/foo/members"
  >
    <div
      data-stylename="header"
    >
      Members
    </div>
    <div
      data-stylename="images-and-count"
    >
      <RoundImageRow
        data-stylename="image-row"
        imageUrls={
          Array [
            "https://s3.amazonaws.com/uifaces/faces/twitter/fiterik/128.jpg?26029",
            "https://s3.amazonaws.com/uifaces/faces/twitter/ramanathan_pdy/128.jpg?68045",
            "https://s3.amazonaws.com/uifaces/faces/twitter/kapaluccio/128.jpg?10715",
            "https://s3.amazonaws.com/uifaces/faces/twitter/josevnclch/128.jpg?36352",
            "https://s3.amazonaws.com/uifaces/faces/twitter/josemarques/128.jpg?42174",
            "https://s3.amazonaws.com/uifaces/faces/twitter/thomasgeisen/128.jpg?66249",
            "https://s3.amazonaws.com/uifaces/faces/twitter/arashmanteghi/128.jpg?52422",
            "https://s3.amazonaws.com/uifaces/faces/twitter/digitalmaverick/128.jpg?90195",
          ]
        }
      />
      <span
        data-stylename="members-total"
      >
        +5.6k
      </span>
    </div>
  </Link>
</div>
`;

exports[`MemberSection Shows invite link if canModerate is true 1`] = `
<div
  data-stylename="member-section"
>
  <Link
    data-stylename="members-link"
    to="/c/foo/members"
  >
    <div
      data-stylename="header"
    >
      Members
    </div>
    <div
      data-stylename="images-and-count"
    >
      <RoundImageRow
        data-stylename="image-row"
        imageUrls={
          Array [
            "https://s3.amazonaws.com/uifaces/faces/twitter/fiterik/128.jpg?26029",
            "https://s3.amazonaws.com/uifaces/faces/twitter/ramanathan_pdy/128.jpg?68045",
            "https://s3.amazonaws.com/uifaces/faces/twitter/kapaluccio/128.jpg?10715",
            "https://s3.amazonaws.com/uifaces/faces/twitter/josevnclch/128.jpg?36352",
            "https://s3.amazonaws.com/uifaces/faces/twitter/josemarques/128.jpg?42174",
            "https://s3.amazonaws.com/uifaces/faces/twitter/thomasgeisen/128.jpg?66249",
            "https://s3.amazonaws.com/uifaces/faces/twitter/arashmanteghi/128.jpg?52422",
            "https://s3.amazonaws.com/uifaces/faces/twitter/digitalmaverick/128.jpg?90195",
          ]
        }
      />
      <span
        data-stylename="members-total"
      >
        +5.6k
      </span>
    </div>
  </Link>
  <Link
    data-stylename="invite-link"
    to="/c/foo/settings/invite"
  >
    <Button
      color="green-white-green-border"
    >
      Invite People
    </Button>
  </Link>
</div>
`;
